@startuml Bridge
scale 1024 height
abstract Abstraction {
  Operation()
}
interface Implementor {
  OperationImp()
}
class ConcreteImplementorA {
  OperationImp()
}
class ConcreteImplementorB {
  OperationImp()
}

note left of Abstraction::Operation
  imp->OperationImp();
end note

Abstraction <|-- RefinedAbstraction
Abstraction o- Implementor
Implementor <|-- ConcreteImplementorA
Implementor <|-- ConcreteImplementorB

@enduml